[project]
name = "linkedin-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "playwright>=1.51.0",
    "playwright-stealth>=2.0.0",
    "jupyter",
    "ipykernel",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    
]


